Post build file copies were causing build failures. Using $(SolutionDir) macro instead of relative paths instead now.

--- a/Code/Client/Inbox2/Plugins/Documents/Inbox2.Plugins.Documents.csproj
+++ b/Code/Client/Inbox2/Plugins/Documents/Inbox2.Plugins.Documents.csproj
@@ -303,6 +303,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)*.*" "..\..\..\..\..\..\..\Client\Inbox2\$(OutDir)"</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetDir)*.*" "$(SolutionDir)\Client\Inbox2\$(OutDir)"</PostBuildEvent>
   </PropertyGroup>
 </Project>
