--- a/Code/Client/Inbox2/Plugins/StatusUpdates/Inbox2.Plugins.StatusUpdates.csproj
+++ b/Code/Client/Inbox2/Plugins/StatusUpdates/Inbox2.Plugins.StatusUpdates.csproj
@@ -244,7 +244,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)*.*" "..\..\..\..\..\..\..\Client\Inbox2\$(OutDir)"</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetDir)*.*" "$(SolutionDir)\Client\Inbox2\$(OutDir)"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
